@@ -1,12 +1,0 @@
-This package was debianized by Miek Gieben <miekg@atoom.net> on
-Sun,  1 Oct 2006 13:57:21 +0200.
-
-It was downloaded from http://www.miek.nl/projects/rdup
-
-Copyright Holder: Miek Gieben <miek@miek.nl>
-
-License:
-
-rdup is licensed under the GPL version 3 and only that version.
-See the file LICENSE in rdup's source distribution for the complete
-license.
