@@ -1,3 +1,0 @@
-README
-todo
-rdup.cron
