@@ -1,4 +1,0 @@
-AUTHORS
-DESIGN
-DEPENDENCIES
-README
