@@ -1,22 +1,0 @@
-Document: rdup
-Title: Debian rdup Manual
-Author: <insert document author here>
-Abstract: This manual describes what rdup is
- and how it can be used to
- manage online manuals on Debian systems.
-Section: unknown
-
-Format: debiandoc-sgml
-Files: /usr/share/doc/rdup/rdup.sgml.gz
-
-Format: postscript
-Files: /usr/share/doc/rdup/rdup.ps.gz
-
-Format: text
-Files: /usr/share/doc/rdup/rdup.text.gz
-
-Format: HTML
-Index: /usr/share/doc/rdup/html/index.html
-Files: /usr/share/doc/rdup/html/*.html
-
-  
