@@ -8,7 +8,11 @@ post 0.6.0:
   do a seek in the file
 * rdup-s3 bucket filename
     rdup-s3 --download bucket filename
-
+* reverse the output of rdup, so directories come last. This way
+  directories  can be made with the default permissions and these
+  can 
+  doesn't work if the backup is made as a none root users - you 
+  will not be able to restore. BUT still...
 
 :install:
 
