@@ -1,100 +1,0 @@
-rdup (0.6.1) unstable; urgency=low
-
-  * New upstream release
-  * Amazon S3 support added
-
- -- Miek Gieben <miekg@atoom.net>  Mon,  21 May 2008 23:03:13 +0200
-
-rdup (0.6.0) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Mon,  21 May 2008 23:03:13 +0200
-
-rdup (0.6.0-rc1-1) unstable; urgency=low
-
-  * New upstream release
-  * i18n support added
-  * hardlink support added
-  * lots of updates and tweaks
-
- -- Miek Gieben <miekg@atoom.net>  Mon,  21 Apr 2008 23:03:13 +0200
-
-rdup (0.5.8-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Wed,  10 Mar 2008 23:03:13 +0200
-
-rdup (0.5.5-1) unstable; urgency=low
-
-  * New upstream release
-  * License change to GPL3
-
- -- Miek Gieben <miekg@atoom.net>  Wed,  10 Feb 2008 23:03:13 +0200
-
-rdup (0.5.3-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Wed,  28 May 2007 23:03:13 +0200
-
-rdup (0.5.0-1) unstable; urgency=low
-
-  * New upstream release
-  * All paths have changed from sbin to usr/bin
-  * A lot of utilities are removed from the archive
-  * Completely new algorithm for detecting what to print
-
- -- Miek Gieben <miekg@atoom.net>  Wed,  9 May 2007 23:03:13 +0200
-
-rdup (0.3.10-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Wed,  9 May 2007 23:03:13 +0200
-
-rdup (0.3.7-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Tue, 10 Feb 2007 23:03:13 +0200
-
-rdup (0.3.5-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Tue, 26 Dec 2006 16:07:18 +0200
-
-rdup (0.3.4-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Mon, 10 Dec 2006 16:07:18 +0200
-
-rdup (0.3.3-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Mon,  3 Dec 2006 16:07:18 +0200
-
-rdup (0.3.2-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Mon,  2 Dec 2006 16:07:18 +0200
-
-
-rdup (0.3.2-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Miek Gieben <miekg@atoom.net>  Mon,  2 Dec 2006 16:07:18 +0200
-
-
-rdup (0.3.0-1) unstable; urgency=low
-
-  * Initial release.
-
- -- Miek Gieben <miekg@atoom.net>  Mon,  2 Oct 2006 17:17:18 +0200
-
